--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ SQLAlchemy==1.3.22
 SQLAlchemy-serializer==1.3.4.4
 tornado==6.1
 tornado-sqlalchemy==0.7.0
+bcrypt~=3.2.0
+basicauth~=0.4.1
+selenium~=3.141.0
