--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,8 @@ bcrypt~=3.2.0
 basicauth~=0.4.1
 selenium~=3.141.0
 psutil~=5.8.0
+pynubank~=2.12.1
+requests~=2.25.1
+websockets~=9.1
+httplib2~=0.19.1
+jsmin~=2.2.2
